# chess-info

./: .gitignore  Cargo.toml  README.md  chess-info.js  cli.js  fetch.js  filter.js  format.js  package-lock.json  package.json  parse.js  tsconfig.json
docs/: api-docs.txt  api-endpoints.txt  example.pgn  game-example.json
src/: cli.ts  fetch.ts  filter.ts  format.ts  main.rs  parse.ts  tags.pest  types.ts
