[package]
name = "chess-info"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version =  "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
